@@ -7,6 +7,12 @@
 
 2000-05-01  Chema Celorio  <chema@celorio.com>
 
+	* plugin.c (gedit_plugins_window_add): memleaks -= 1;
+
+	* recent.c (recent_update_menus): memleaks -= 1;
+
+2000-05-01  Chema Celorio  <chema@celorio.com>
+
 	* recent.c (recent_update_menus): memleaks -= 4;
 
 	* plugin.c (gedit_plugins_window_add): memleaks -= 6;
